<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.kfang.agent</groupId>
    <artifactId>agent-features</artifactId>
    <version>2.5.0-SNAPSHOT</version>
    <name>agent-features</name>
    <description>盘客组件集</description>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.kfang</groupId>
        <artifactId>cloud-dependencies</artifactId>
        <version>3.0.0-SNAPSHOT</version>
        <relativePath/>
    </parent>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <hyuga.all.version>2.2.0-SNAPSHOT</hyuga.all.version>
        <feature.version>2.5.0-SNAPSHOT</feature.version>
    </properties>

    <modules>
        <module>feature-monitor</module>
        <module>feature-wechat</module>
        <module>feature-saas-context</module>
        <module>feature-saas-core</module>
        <module>feature-saas-open</module>
        <module>feature-dingtalk</module>
        <module>feature-lombok-pql</module>
    </modules>

</project>
